xx/xx/20

* New UI with a single window
* New demosaicing algorithms, RCD is now the default one
* New support for FITS decompression and compression with Rice/Gzip and HCompress methods (Fabrice Faure)
* New support for quantization and HCompress scale factor settings for FITS compression (Fabrice Faure)
* New functions to extract Ha and Ha/OII from RGB images
* New linear match function
* New preference entries for FITS compression settings (Fabrice Faure)
* New native image format: 32-bit floating point image
* New native sequence format: FITS sequence in a single image
* New UI for sequence image list
* New zoom handing: ctrl+scroll (up and down) is the new way to zoom in and out
* New preview in open dialog
* New language selector in preferences
* New image importer: HEIF format
* New stacking filtering criterion (weighted FWHM). It can exclude more spurious images
* New macOS bundle
* New RL deconvolution tool
* New keyword CTYPE3 for RGB FITS in order to be used by Aladin
* New binary siril-cli to start siril without X server
* New preference entries with darks/biases/flat libraries
* New preliminary Meson support (Florian Benedetti)
* X(Y)BAYEROFF can now be configured in preferences
* Parallelizing conversion and some other functions
* CI file was totally rewritten (Florian Benedetti)
* Config file was moved to more standard path
* Optimization of several algorithms (Ingo Weyrich)
* Background extraction is now available for sequence
* Midtone Transfer Function is now available for sequence
* Fixed code for Big Endian machine (Flössie)
* Fixed bug in SER joining operation when Bayer information was lost
* Fixed a bug of inaccessible directories in MacOS Catalina
* Fixed crash on some OpenCV operation with monochrome images
* Fixed annoying error boxes about missing disk drives on Windows

siril 0.9.12
11/04/19

* Fixed stat computation on 3channel FITS
* Fixed free memory computation on Windows