@@ -196,13 +196,13 @@ gpointer symlink_thread_worker(gpointer p) {
 		g_free(args->list[i]);
 	if (args->retval)
 		siril_log_message(_("%s ended with error, %d/%d input files done\n"),
-				symlink_is_ok ? _("Symbolic link creation") : _("Copy"), args->nb_linked_files, args->total);
+				symlink_is_ok ? _("Symbolic link creation") : _("Files copy"), args->nb_linked_files, args->total);
 	else {
 		if (args->nb_linked_files == args->total)
 			siril_log_message(_("%s succeeded, %d/%d input files done\n"),
-					symlink_is_ok ? _("Symbolic link creation") : _("Copy"), args->nb_linked_files, args->total);
+					symlink_is_ok ? _("Symbolic link creation") : _("Files copy"), args->nb_linked_files, args->total);
 		else siril_log_message(_("%s aborted, %d/%d input files done\n"),
-				symlink_is_ok ? _("Symbolic link creation") : _("Copy"), args->nb_linked_files, args->total);
+				symlink_is_ok ? _("Symbolic link creation") : _("Files copy"), args->nb_linked_files, args->total);
 	}
 	siril_add_idle(end_symlink_idle, args);
 	return NULL;
