@@ -7,6 +7,7 @@ xx/xx/20
 * New support for quantization and HCompress scale factor settings for FITS compression (Fabrice Faure)
 * New functions to extract Ha and Ha/OII from RGB images
 * New linear match function
+* New link command to create symbolic links
 * New preference entries for FITS compression settings (Fabrice Faure)
 * New native image format: 32-bit floating point image
 * New native sequence format: FITS sequence in a single image
